--- a/static/__wm/iframe.html
+++ b/static/__wm/iframe.html
@@ -95,7 +95,7 @@ h3 { border-bottom: 1px dotted grey; }
 <body>
 <div id="annotateBar" style="background-color: #ffe">
   <div>
-  <span style="float: left"><span id="pxControls" style="width: 8%"></span><strong>Annotations</strong></span>
+  <span style="float: left"><span id="pxControls"></span><strong>Annotations</strong></span>
   <span style="float: right"><button id="annoNew">New</button></span> 
   </div>
   <br style="clear: both" />
