--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/__wm/semantic-ui/css/semantic.css">
 <link rel="stylesheet" href="lib/jquery-ui.css" />
 <link rel="stylesheet" href="dashboard.css" />
+<link rel="stylesheet" href="lib/jstree/themes/default/style.min.css" />
 <style type="text/css">
 @import "/__wm/lib/jquery-ui.css";
 @import "/__wm/lib/jquery-ui.css";
@@ -83,7 +84,7 @@ progress:after { content: '%'; }
 <script src="HOMEPAGE/member.js" defer="defer"></script>
 <script src="lib/jquery-1.9.1.js"></script>
 <script src="lib/jquery-ui.js"></script>
-<script src="lib/jstree/jstree.min.js"></script>
+<script src="lib/jstree/jstree.js"></script>
 <script src="lib/jquery.cookie.js"></script>
 <script src="lib/jquery.address.js"></script>
 <script src="lib/faye-browser-min.js"></script>
