--- a/static/__wm/iframe-contents.html
+++ b/static/__wm/iframe-contents.html
@@ -4,8 +4,8 @@
   <span style="float: right"><button id="annoNew">New</button></span> 
   </div>
   <br style="clear: both" />
+  <div>Filter <input id="treeFilter"></div>
   <div id="treeContainer" style="overflow: auto; padding: 4px">
-    <div id="annoTree"></div>
   </div>
   <div id="annotateEditor" class="editor" style="display: none">
     <form>
