--- a/static/__wm/iframe.html
+++ b/static/__wm/iframe.html
@@ -99,8 +99,8 @@ h3 { border-bottom: 1px dotted grey; }
   <span style="float: right"><button id="annoNew">New</button></span> 
   </div>
   <br style="clear: both" />
+  <div>Filter <input id="treeFilter"></div>
   <div id="treeContainer" style="overflow: auto; padding: 4px">
-    <div id="annoTree"></div>
   </div>
   <div id="annotateEditor" class="editor" style="display: none">
     <form>
