--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -20,10 +20,10 @@ progress:after { content: '%'; }
 </style>
 </head>
 <body>
-<div class="ui vertical details right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
+<div class="ui vertical details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   include "iframe-contents.html"
 </div>
-<div class="ui content" id="pxContent" style="width: 100%">
+<div class="ui content" id="ipxContent">
   <div class="six fluid ui buttons">
    <button title="Search settings" class="ui mini search attached button">
       <i class="mini search icon"></i>
