--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -76,8 +76,8 @@ table td, table td * {
       <p id="formdata">XHR2's FormData is not supported</p>
       <p id="progress">XHR2's upload progress isn't supported</p>
     </div>
-    <p><progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress></p>
-    <div id="holder" style="height: 90%; width: 100%; overflow: auto">
+    <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
+    <div id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
       <div id="results"></div>
     </div>
   </div>
