--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -86,7 +86,7 @@ table td, table td * {
 <script src="anno.js" defer="defer"></script>
 <script src="dragFile.js"></script>
 <script src="dashboard.js" defer="defer"></script>
-<script src="HOMEPAGE/member.js" defer="defer"></script>
+<script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
 <script src="lib/jquery-1.9.1.js"></script>
 <script src="lib/jquery-ui.js"></script>
 <script src="lib/jstree/jstree.js"></script>
