--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -24,6 +24,20 @@ table td, table td * {
 </head>
 <body>
 <div class="ui vertical details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
+  <div class="three fluid ui buttons">
+   <button title="Annotations" class="ui mini annotations attached button">
+      <i class="mini edit icon"></i>
+      <span id="annotationCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
+    </button>
+    <div title="More options" class="ui mini context attached dropdown button">
+      <i class="mini reorder icon"></i>
+      <div id="itemContext" class="menu">
+      </div>
+    </div>
+   <button title="New annotation" class="ui mini add attached button">
+      <i class="mini add icon"></i>
+    </button>
+  </div>
   include "iframe-contents.html"
 </div>
 <div class="ui content" id="ipxContent">
@@ -67,7 +81,7 @@ table td, table td * {
     include "settings.html"
     </div>
     <div class="lab content hidden">
-    <iframe style="width: 100%; height: 100%" src="/cluster"></iframe>
+    <iframe style="width: 100%; height: 100%" src="/lab"></iframe>
     </div>
     <div id="uploadInfo">
       <p id="upload" class="hidden"><label>Your browser doesn't support drag & drop, but you can still upload via this input field:<br /><input type="file"></label></p>
