browser result interaction and reduce sentiment annos

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -20,10 +20,16 @@ progress:after { content: '%'; }
 table td, table td * {
     vertical-align: top;
 }
+
+a:link {text-decoration:none;}
+a:visited {text-decoration:none;}
+a:hover {text-decoration:underline;}
+a:active {text-decoration:underline;}
+
 </style>
 </head>
 <body>
-<div class="ui vertical details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
+<div class="ui details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   <div class="three fluid ui buttons">
    <button title="Annotations" class="ui mini annotations attached button">
       <i class="mini edit icon"></i>
