--- a/contrib/__wm/team.html
+++ b/contrib/__wm/team.html
@@ -1,10 +1,14 @@
-      <h3 class="morenext">New »</h3>
+      <div class="ui teamlist buttons">
+        <button title="New member" class="ui attached large add member button">
+          <i class="mini add icon"></i>
+        </button>
+      </div>
+<!--      <h3 class="morenext">New »</h3>
       <div class="hidden innerMoreNext">
         Name: <input id="newName" />
         Type: <select id="newType"><option>User</option><option>Annotation set</option><option>Scraper</option></select>
         <button id="newCreate">Add</button>
-      </div>
-      <div id="teamList"></div>
+      </div> -->
       <div class="anedit" id="aneditor">
         <a title="Change name by editing this field">Name</a>: <input id="username" /><input type="hidden" id="lastUsername" /><br />
         Description:<br />
