--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -26,6 +26,10 @@ a:visited {text-decoration:none;}
 a:hover {text-decoration:underline;}
 a:active {text-decoration:underline;}
 
+.image {
+  height: 24px;
+}
+
 </style>
 </head>
 <body>
@@ -89,7 +93,7 @@ a:active {text-decoration:underline;}
     <div class="lab content hidden">
     <iframe style="width: 100%; height: 100%" src="/lab"></iframe>
     </div>
-    <div id="uploadInfo">
+    <div id="uploadInfo" class="hidden">
       <p id="upload" class="hidden"><label>Your browser doesn't support drag & drop, but you can still upload via this input field:<br /><input type="file"></label></p>
       <p id="filereader">File API & FileReader API not supported</p>
       <p id="formdata">XHR2's FormData is not supported</p>
