--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -36,45 +36,45 @@ a:active {text-decoration:underline;}
 <div class="ui details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   <div class="three fluid ui buttons">
    <button title="Annotations" class="ui mini annotations attached button">
-      <i class="mini edit icon"></i>
+      <i class="large edit icon"></i>
       <span id="annotationCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
     </button>
     <div title="More options" class="ui mini context attached dropdown button">
-      <i class="mini reorder icon"></i>
+      <i class="large reorder icon"></i>
       <div id="itemContext" class="menu">
       </div>
     </div>
    <button title="New annotation" class="ui mini add attached button">
-      <i class="mini add icon"></i>
+      <i class="large add icon"></i>
     </button>
   </div>
   include "iframe-contents.html"
 </div>
 <div class="ui content" id="ipxContent">
   <div class="six fluid ui buttons">
-   <button title="Search settings" class="ui mini search attached button">
-      <i class="mini search icon"></i>
+   <button style="height: 56px" title="Search settings" class="ui mini search attached button">
+      <i class="large search icon"></i>
       <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
     </button>
 
-   <button title="Scraper settings" class="ui mini scrape attached button">
-     <i class="mini sitemap icon"></i>
+   <button title="Scraper settings" class="ui large scrape attached button">
+     <i class="large sitemap icon"></i>
    </button>
 
-    <button title="Conversations" class="ui mini chat attached button">
-      <i class="mini chat icon"></i>
+    <button title="Conversations" class="ui large chat attached button">
+      <i class="large chat icon"></i>
     </button>
 
-   <button title="Team" class="ui mini team attached button">
-     <i class="mini users icon"></i>
+   <button title="Team" class="ui large team attached button">
+     <i class="large users icon"></i>
    </button>
 
-   <button title="Lab" class="ui mini lab attached button">
-     <i class="mini lab icon"></i>
+   <button title="Lab" class="ui large lab attached button">
+     <i class="large lab icon"></i>
    </button>
 
-   <button title="Settings" class="ui mini settings attached button">
-     <i class="mini settings icon"></i>
+   <button title="Settings" class="ui large settings attached button">
+     <i class="large settings icon"></i>
    </button>
   </div>
   <div class="ui content container">
