move served files to config dir, convert to bowser

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -1,14 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="/__wm/semantic-ui/css/semantic.css">
-<link rel="stylesheet" href="lib/jquery-ui.css" />
-<link rel="stylesheet" href="dashboard.css" />
-<link rel="stylesheet" href="lib/jstree/themes/default/style.min.css" />
-<style type="text/css">
-@import "/__wm/lib/jquery-ui.css";
-@import "/__wm/lib/jquery-ui.css";
 
+<link rel="stylesheet" type="text/css" href="/lib/Semantic-UI/build/packaged/css/semantic.css">
+<link rel="stylesheet" href="/lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
+<link rel="stylesheet" href="/lib/jstree/dist/themes/default/style.min.css" />
+<link rel="stylesheet" href="dashboard.css" />
+<style type="text/css">
 /* file upload */
 #holder.hover { border: 4px dashed #0c0; }
 #holder img { display: block; margin: 10px auto; }
@@ -16,10 +14,6 @@
 progress { width: 100%; }
 progress:after { content: '%'; }
 .fail { background: #c00; padding: 2px; color: #fff; }
-
-table td, table td * {
-    vertical-align: top;
-}
 
 a:link {text-decoration:none;}
 a:visited {text-decoration:none;}
@@ -107,17 +101,14 @@ a:active {text-decoration:underline;}
   </div>
 </div>
 </body>
-<script src="anno.js" defer="defer"></script>
-<script src="dragFile.js"></script>
-<script src="dashboard.js" defer="defer"></script>
-<script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
-<script src="lib/jquery-1.9.1.js"></script>
-<script src="lib/jquery-ui.js"></script>
-<script src="lib/jstree/jstree.js"></script>
-<script src="lib/jquery.cookie.js"></script>
+<script src="/lib/jquery/dist/jquery.js"></script>
 <script src="lib/jquery.address.js"></script>
-<script src="lib/faye-browser-min.js"></script>
-<script src="/__wm/semantic-ui/javascript/semantic.js"></script>
 <script src="lib/tablesort.js"></script>
-
+<script src="/lib/jquery-ui/ui/jquery-ui.js"></script>
+<script src="/lib/faye/include.js"></script>
+<script src="/lib/Semantic-UI/build/packaged/javascript/semantic.js"></script>
+<script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
+<script src="anno.js" defer="defer"></script>
+<script src="dashboard.js" defer="defer"></script>
+<script src="dragFile.js"></script>
 </html>
