--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -106,6 +106,7 @@ a:active {text-decoration:underline;}
 <script src="lib/tablesort.js"></script>
 <script src="/lib/jquery-ui/ui/jquery-ui.js"></script>
 <script src="/lib/faye/include.js"></script>
+<script src="/lib/jstree/dist/jstree.min.js"></script>
 <script src="/lib/Semantic-UI/build/packaged/javascript/semantic.js"></script>
 <script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
 <script src="anno.js" defer="defer"></script>
