add options for logo, homepage and collab (via togetherjs)

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -45,7 +45,7 @@ a:active {text-decoration:underline;}
   include "iframe-contents.html"
 </div>
 <div class="ui content" id="ipxContent">
-  <div class="six fluid ui buttons">
+  <div class="main fluid ui buttons">
    <button style="height: 56px" title="Search settings" class="ui mini search attached button">
       <i class="large search icon"></i>
       <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
@@ -54,10 +54,6 @@ a:active {text-decoration:underline;}
    <button title="Scraper settings" class="ui large scrape attached button">
      <i class="large sitemap icon"></i>
    </button>
-
-    <button title="Conversations" class="ui large chat attached button">
-      <i class="large chat icon"></i>
-    </button>
 
    <button title="Team" class="ui large team attached button">
      <i class="large users icon"></i>
@@ -112,4 +108,5 @@ a:active {text-decoration:underline;}
 <script src="anno.js" defer="defer"></script>
 <script src="dashboard.js" defer="defer"></script>
 <script src="dragFile.js"></script>
+<script src="https://togetherjs.com/togetherjs-min.js"></script>
 </html>
