--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -29,7 +29,7 @@ a:active {text-decoration:underline;}
 <body>
 <div class="ui details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   <div class="three fluid ui buttons">
-   <button title="Annotations" class="ui mini annotations attached button">
+    <button title="Annotations" class="ui mini annotations attached button">
       <i class="large edit icon"></i>
       <span id="annotationCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
     </button>
@@ -90,12 +90,43 @@ a:active {text-decoration:underline;}
       <p id="progress">XHR2's upload progress isn't supported</p>
     </div>
     <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
+    <div class="ui hidden inverted selected menu" style="margin: 2px">
+      <div class="ui red selected label" style="margin-left: 4px">1</div>
+      <a class="selectall item">
+        <i class="checked checkbox icon"></i> Select all
+      </a>
+      <a class="invert item">
+        <i class="reverse checked checkbox icon"></i> Invert
+      </a>
+      <a class="download item">
+        <i class="download icon"></i> Download
+      </a>
+      <a class="delete item">
+        <i class="delete icon"></i> Delete
+      </a>
+        <div class="item">
+          <div class="ui icon input">
+            <input type="text" placeholder="Tag...">
+            <i class="tag icon"></i>
+          </div>
+        </div>
+    </div>
     <div id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
       <div id="results"></div>
     </div>
   </div>
+</div>
+
+<div class="ui delete modal hidden">
+  <div class="content">
+    Really move selected to deleted?
+  </div>
+  <div class="actions">
+    <div class="ui button">Cancel</div>
+    <div class="ui button">OK</div>
   </div>
 </div>
+
 </body>
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="lib/jquery.address.js"></script>
