anno loc detection

--- a/contrib/__wm/iframe.html
+++ b/contrib/__wm/iframe.html
@@ -1,22 +1,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href='http://fonts.googleapis.com/css?family=Arvo:regular,bold&amp;subset=latin' rel='stylesheet' />
-<link href='http://fonts.googleapis.com/css?family=Inconsolata&amp;subset=latin' rel='stylesheet' />
- 
-<link rel="stylesheet" href="lib/jquery-ui.css" />
-<script src="lib/jquery-1.9.1.js"></script>
-<script src="lib/jquery-ui.js"></script>
-<script src="lib/jstree/jquery.jstree.js"></script>
-<script src="lib/faye-browser-min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="/__wm/semantic-ui/css/semantic.css">
-<script src="/__wm/semantic-ui/javascript/semantic.js"></script>
-
-<script src="anno.js" defer="defer"></script>
-<script src="HOMEPAGE/member.js"></script>
-
-<link rel='stylesheet' href='dashboard.css'>
+<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->/lib/Semantic-UI/build/packaged/css/semantic.css">
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->/lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->/lib/jstree/dist/themes/default/style.min.css" />
 <style>
 
 .sForm {
@@ -94,4 +81,14 @@ h3 { border-bottom: 1px dotted grey; }
 </head>
 <body>
 include "iframe-contents.html"
+<script src="<!-- @var HOMEPAGE -->/lib/jquery/dist/jquery.js"></script>
+<script src="<!-- @var HOMEPAGE -->/__wm/jquery.address.js"></script>
+<script src="<!-- @var HOMEPAGE -->/__wm/tablesort.js"></script>
+<script src="<!-- @var HOMEPAGE -->/lib/jquery-ui/ui/jquery-ui.js"></script>
+<script src="<!-- @var HOMEPAGE -->/lib/faye/include.js"></script>
+<script src="<!-- @var HOMEPAGE -->/lib/jstree/dist/jstree.min.js"></script>
+<script src="<!-- @var HOMEPAGE -->/lib/Semantic-UI/build/packaged/javascript/semantic.js"></script>
+<script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
+<script src="<!-- @var HOMEPAGE -->/__wm/anno.js" defer="defer"></script>
+
 </body>
