handle complex filenames for uploads

--- a/contrib/__wm/iframe.html
+++ b/contrib/__wm/iframe.html
@@ -1,9 +1,6 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->/lib/Semantic-UI/build/packaged/css/semantic.css">
-<link rel="stylesheet" href="<!-- @var HOMEPAGE -->/lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
-<link rel="stylesheet" href="<!-- @var HOMEPAGE -->/lib/jstree/dist/themes/default/style.min.css" />
 <style>
 
 .sForm {
@@ -82,13 +79,9 @@ h3 { border-bottom: 1px dotted grey; }
 <body>
 include "iframe-contents.html"
 <script src="<!-- @var HOMEPAGE -->/lib/jquery/dist/jquery.js"></script>
-<script src="<!-- @var HOMEPAGE -->/__wm/jquery.address.js"></script>
-<script src="<!-- @var HOMEPAGE -->/__wm/tablesort.js"></script>
-<script src="<!-- @var HOMEPAGE -->/lib/jquery-ui/ui/jquery-ui.js"></script>
 <script src="<!-- @var HOMEPAGE -->/lib/faye/include.js"></script>
 <script src="<!-- @var HOMEPAGE -->/lib/jstree/dist/jstree.min.js"></script>
-<script src="<!-- @var HOMEPAGE -->/lib/Semantic-UI/build/packaged/javascript/semantic.js"></script>
 <script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
-<script src="<!-- @var HOMEPAGE -->/__wm/anno.js" defer="defer"></script>
+<script src="/__wm/anno.js" defer="defer"></script>
 
 </body>
