create category annotation, simplistic classifier, developing proxy tree

--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -15,7 +15,7 @@
         </div>
         <div>
           <label for="types">Type</label>
-          <textarea style="width: 100%" name="types" id="types" class="text ui-widget-content ui-corner-all"></textarea>
+          <select id="annoType"><option>category</option><option>quote</option></select>
         </div>
         <div>
           <label for="annoDesc">Description</label>
