move items to deleted

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -123,7 +123,7 @@ a:active {text-decoration:underline;}
   </div>
   <div class="actions">
     <div class="ui button">Cancel</div>
-    <div class="ui button">OK</div>
+    <div class="ui confirm delete button">Yes</div>
   </div>
 </div>
 
