--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -2,11 +2,11 @@
   <div class="ui three column page grid">
     <div class="column">
       <div class="field">
-        <label>Terms</label>
+        <label for="termSearch">Terms</label>
         <input id="termSearch" />
       </div>
       <div class="field">
-        <label>Annotations</label>
+        <label for="annoSearch">Annotations</label>
         <input id="annoSearch" />
       </div>
       <div class="two fields">
@@ -16,22 +16,22 @@
     </div>
     <div class="column">
       <div class="field">
-        <label>From</label>
+        <label for="fromDate">From</label>
         <input id="fromDate" />
       </div>
       <div class="field">
-        <label>To</label>
+        <label for="toDate">To</label>
         <input id="toDate" />
       </div>
       <div class="field">
-        <label>Member</label>
+        <label for="searchMember">Member</label>
         <input id="searchMember" />
       </div>
     </div>
     <div class="column">
       <div class="ui fluid form segment">
         <div class="field">
-          <label for="searchSave">Save</label>
+          <label for="searchName">Save</label>
           <input name="searchName" />  <button class="ui mini button"><i class="save icon"></i></button>
         </div>
         <div class="field">
