--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,5 +1,5 @@
 <div class="ui form">
-  <div class="ui three column page grid">
+  <div class="ui three column stackable page grid">
     <div class="column">
       <div class="field">
         <label for="termSearch">Terms</label>
