--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -1,4 +1,4 @@
-<div class="ui two column page grid">
+<div class="ui two column stackable page grid">
   <div class="column">
     <div class="ui fluid form segment">
       <div class="field">
