team / member forms

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -71,6 +71,9 @@ a:active {text-decoration:underline;}
     <div class="team content hidden">
     include "team.html"
     </div>
+    <div class="member content hidden">
+    include "member.html"
+    </div>
     <div class="search content hidden">
     include "query.html"
     </div>
@@ -111,7 +114,7 @@ a:active {text-decoration:underline;}
           </div>
         </div>
     </div>
-    <div id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
+    <div class="ui search results segment" id="holder" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
       <div id="results"></div>
     </div>
   </div>
