--- a/contrib/__wm/team.html
+++ b/contrib/__wm/team.html
@@ -1,5 +1,5 @@
-<div class="ui teamlist buttons">
-  <button title="New member" class="ui attached large add member button">
+<div class="ui teamlist segment">
+<!--  <button title="New member" class="ui attached mini add member button">
     <i class="mini add icon"></i>
-  </button>
+  </button> -->
 </div>
