--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -13,6 +13,11 @@
         <button class="ui blue mini search submit button" id="searchForm">Search</button> &nbsp;
         <span class="ui checkbox"><input id="refreshQueries" type="checkbox" /> <label for="refreshQueries" id="refreshLabel" title="Refreshes the query results periodically">Refresh</label></span>
       </div>
+      <div class="field">
+        <button class="ui mini viz button">
+          <i class="unhide icon"></i>
+        </button>
+      </div>
     </div>
     <div class="column">
       <div class="field">
