serve anno to proxied pages via an iframe

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
 <link rel="stylesheet" href="/lib/jstree/dist/themes/default/style.min.css" />
 <link rel="stylesheet" href="dashboard.css" />
-<link rel="stylesheet" href="/__wm/lib/d3plus.css" />
+<link rel="stylesheet" href="/__wm/lib/d3plus/d3plus.css" />
 <style type="text/css">
 /* file upload */
 #holder.hover { border: 4px dashed #0c0; }
@@ -148,8 +148,8 @@ a:active {text-decoration:underline;}
 <script src="dragFile.js"></script>
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
 
-<script src="/__wm/lib/d3.js"></script>
-<script src="/__wm/lib/d3plus.min.js"></script>
+<script src="/__wm/lib/d3plus/d3.js"></script>
+<script src="/__wm/lib/d3plus/d3plus.min.js"></script>
 <script src="/__wm/viz.js"></script>
 
 </html>
