--- a/contrib/__wm/injected-iframe.html
+++ b/contrib/__wm/injected-iframe.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <link rel="stylesheet" href="/__wm/lib/jstree.style.min.css" />
 </head>
 <body>
@@ -9,7 +10,7 @@
   <span id="annotationCount"></span>
   <div id="treeContainer"></div>
 
-  <script src="<!-- @var HOMEPAGE -->/lib/jquery/dist/jquery.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="<!-- @var HOMEPAGE -->/lib/faye/include.js"></script>
   <script src="<!-- @var HOMEPAGE -->/lib/jstree/dist/jstree.min.js"></script>
   <script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
