--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -1,5 +1,5 @@
 <div class="ui form">
-  <div class="ui three column stackable page grid">
+  <div class="ui four column stackable page grid">
     <div class="column">
       <div class="field">
         <label for="termSearch">Terms</label>
@@ -8,9 +8,16 @@
     </div>
     <div class="column">
       <div class="field">
+        <label for="annoMember">Member</label>
+        <input id="annoMember" />
+        <select id="annotationStatus"><option value="all">All</option><option value="requested">Requested</option><option value="resolved">Resolved</option></select>
+      </div>
+    </div>
+    <div class="column">
+      <div class="field">
         <label for="annoSearch">Annotations</label>
         <input id="annoSearch" />
-        <select id="validationState"><option>Validated or unvalidated</option><option>Validated</option><option>Unvalidated</option><option>All including un-annotated</option></select>
+        <select id="validationState"><option value="valOrUnval">Validated or unvalidated</option><option value="val">Validated</option><option value="unval">Unvalidated</option><option value="notann">Not annotated</option><option value="all">All</option></select>
       </div>
     </div>
     <div class="column">
