query annotation state

--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -10,7 +10,7 @@
       <div class="field">
         <label for="annoMember">Member</label>
         <input id="annoMember" />
-        <select id="annotationStatus"><option value="all">All</option><option value="requested">Requested</option><option value="resolved">Resolved</option></select>
+        <select id="annotationState"><option value="visited">Visited</option><option value="requested">Annotation requested</option><option value="provided">Annotation provided</option></select>
       </div>
     </div>
     <div class="column">
