--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -17,7 +17,7 @@
       <div class="field">
         <label for="annoSearch">Annotations</label>
         <input id="annoSearch" />
-        <select id="validationState"><option value="valOrUnval">Validated or unvalidated</option><option value="val">Validated</option><option value="unval">Unvalidated</option><option value="notann">Not annotated</option><option value="all">All</option></select>
+        <select id="validationState"><option value="valOrUnval">Validated or unvalidated</option><option value="val">Validated</option><option value="unval">Unvalidated</option><option value="notann">Not annotated</option><option value="queued">Not visited</option><option value="all">All</option></select>
       </div>
     </div>
     <div class="column">
