adding sample docs

--- a/test/data/structured-medical-record.html
+++ b/test/data/structured-medical-record.html
@@ -11,7 +11,7 @@
  <meta name="xmp:CreatorTool" content="Writer"/>
  <meta name="Content-Type" content="application/pdf"/>
  <meta name="resourceName" content="Report.pdf"/>
- <title/>
+ <title></title>
 </head>
 <body>
  Date of Admission: 11/1/10
@@ -53,7 +53,7 @@
  plan. 
  
  Physical Examination at Discharge: T: 99.3F BP 105/62 HR 110 RR 24
- Weight 30 kg 
+ Weight: 30 kg 
  General: Awake, alert, no apparent distress 
  HEENT: Normocephalic, atraumatic. Hyperpigmentation beneath eyes. Mucus membranes moist. 
  CVS: Regular rate and rhythm. No murmurs appreciated. 
