--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -8,6 +8,7 @@
       <div class="field">
         <label for="continueFinding">Continue scraping</label>
         <select id="continueFinding" title="when should search paths stop">
+          <option>link only</option>
           <option>term within 1 link</option>
           <option>term within 2 links</option>
           <option>term within 3 links</option>
