--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -15,15 +15,11 @@
         </div>
         <div>
           <label for="types">Type</label>
-          <select id="annoType"><option>category</option><option>quote</option></select>
+          <select id="annoType"><option>category</option></select>
         </div>
         <div>
           <label for="annoDesc">Description</label>
           <textarea style="width: 100%" name="annoDesc" id="annoDesc" class="text ui-widget-content ui-corner-all" /></textarea>
-        </div>
-        <div>
-          <label for="created">Created</label>
-          <input type="text" name="created" id="created" value="" class="text ui-widget-content ui-corner-all" />
         </div>
         <div>      
           <button id="annoSave">Save</button>
@@ -33,4 +29,4 @@
       </fieldset>
     </form>
   </div>
-</div>  
+</div>
